--- a/develop/package.json
+++ b/develop/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "unit10hw",
-  "version": "1.0.0",
-  "description": "OOP and testing for week 10 homework",
+  "name": "",
+  "version": "",
+  "description": "",
   "main": "index.js",
   "directories": {
     "lib": "lib",
@@ -11,15 +11,15 @@
     "test": "jest --verbose test/*"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/stevetrilogy/unit10hw.git"
+    "type": "",
+    "url": ""
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/stevetrilogy/unit10hw/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
+  "homepage": "",
   "dependencies": {
     "inquirer": "^6.3.1"
   },
